--- a/frontend/src/component/Products/Products.css
+++ b/frontend/src/component/Products/Products.css
@@ -12,6 +12,7 @@
     justify-content: center;
     align-items: center;
     margin-left: 6vmax;
+    min-height: 30vh;
 }
 
 .paginationBox{
@@ -83,7 +84,9 @@ border-radius: 0 5px 5px 0;
 .category-link:hover{
     color: tomato;
 }
-
+.filterBox>fieldset{
+    border: 1px solid rgba(7, 0, 0, 0.88);
+}
 @media screen and (max-width: 600px){
     .filterBox{
         width: 20vmax;
@@ -92,6 +95,9 @@ border-radius: 0 5px 5px 0;
     }
     .page-link{
         font: 400 2vmax "Roboto";
+    }
+    .category-link{
+        font: 500 2.5vmax "Roboto";
     }
     
 }
